--- a/generators/gh-nodejs-build/templates/build-release.yaml
+++ b/generators/gh-nodejs-build/templates/build-release.yaml
@@ -167,6 +167,7 @@ jobs:
           <%_ for (const artifact of ociArtifacts) { _%>
           echo "Pulling artifact <%= artifact.artifact %> to <%= artifact.output %>"
           oras pull <%= artifact.artifact %> --output <%= artifact.output %>
+          oras manifest fetch -o <%= artifact.output %>/manifest.json <%= artifact.artifact %>
           <%_ } -%>
         working-directory: ./<%= relativePath %>
         env:
@@ -204,7 +205,7 @@ jobs:
         id: publish-artifact
         run: |
           oras login ghcr.io -u ${{ github.actor }} --password-stdin <<< ${{ secrets.GITHUB_TOKEN }}
-          oras push --annotation-file annotation.json --export-manifest manifest.json ghcr.io/${{ github.repository }}/<%= serviceName %>:${PROJECT_TAG} annotation.json <%= publishArtifactSuffix %>
+          oras push --annotation-file annotation.json --export-manifest manifest.json ghcr.io/${{ github.repository }}/<%= serviceName %>:${PROJECT_TAG} <%= publishArtifactSuffix %>
           MANIFEST=$(cat ./manifest.json)
           echo $MANIFEST
           echo "artifact_sha256=$(echo $MANIFEST | jq -r '.layers[] | select(.annotations["org.opencontainers.image.title"] == "dist") | .digest')" >> $GITHUB_OUTPUT
