--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "yaml": "^2.8.1",
+    "yaml": "^2.8.2",
     "yeoman-generator": "^7.5.1",
     "yosay": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.35.0",
+    "@eslint/js": "^10.0.1",
+    "eslint": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "jest": "^30.1.3",
-    "lint-staged": "^16.1.6",
-    "prettier": "^3.6.2",
+    "eslint-plugin-prettier": "^5.5.5",
+    "globals": "^17.3.0",
+    "jest": "^30.2.0",
+    "prettier": "^3.8.1",
     "yeoman-assert": "^3.1.1",
-    "yeoman-test": "^10.1.1"
+    "yeoman-test": "^11.2.0"
   },
   "type": "module",
   "license": "Apache-2.0"
