--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -195,18 +195,19 @@ jobs:
 <% } -%>
       - name: Publish artifact
         id: publish-artifact
-        working-directory: ./<%= relativePath %>
-<% if (gitHubPackages) { -%>
+        working-directory: ./
+<% if (artifactRepositoryType === 'GitHubPackages') { -%>
         run: |
           ARTIFACT_NAME="${ARTIFACT_ID}-${PROJECT_VERSION}.${PACKAGE_TYPE}"
-          mvn <%= mavenBuildCommand %>
+          source ./env.sh build ./<%= relativePath %> --skip-vault
+          ./mvnw <%= mavenBuildCommand %>
+          cd ./<%= relativePath %>
           echo "artifact_sha256=$(sha256sum <%= pomRoot %>target/${ARTIFACT_NAME} | awk '{ print $1 }')" >> $GITHUB_OUTPUT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-<% if (configureNrArtifactory) { -%>
-          ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
-          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
-<% } -%>
+<% if (toolsBuildSecrets) { for (const secret of toolsBuildSecrets.split(',')) { -%>
+          <%= secret.toUpperCase() %>: ${{ secrets.<%= secret.toUpperCase() %> }}
+<% } } -%>
           PROJECT_VERSION: ${{ steps.set-build-output-parameters.outputs.project_version }}
           ARTIFACT_ID: ${{ steps.set-build-output-parameters.outputs.artifact_id }}
           PACKAGE_TYPE: ${{ steps.set-build-output-parameters.outputs.package_type }}
@@ -220,10 +221,14 @@ jobs:
           ARTIFACT_SHA256: ${{ steps.publish-artifact.outputs.artifact_sha256 }}
           BUILD_TOKEN: ${{ env.ACTION_TOKEN_BUILD }}
 <% } else { -%>
-        run: mvn <% mavenBuildCommand %>
+        run: |
+          source ./env.sh build ./<%= relativePath %> --skip-vault
+          ./mvnw <% mavenBuildCommand %>
         env:
-          ARTIFACTORY_USERNAME: ${{ secrets.ARTIFACTORY_USERNAME }}
-          ARTIFACTORY_PASSWORD: ${{ secrets.ARTIFACTORY_PASSWORD }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+<% if (toolsBuildSecrets) { for (const secret of toolsBuildSecrets.split(',')) { -%>
+          <%= secret.toUpperCase() %>: ${{ secrets.<%= secret.toUpperCase() %> }}
+<% } } -%>
           BUILD_NUMBER: ${{ github.run_number }}
           BUILD_URL: ${{ github.repositoryUrl }}
       - name: Set build info
